provided a path, and logic to get from the product list to a specific product

--- a/views/partials/product_list.hbs
+++ b/views/partials/product_list.hbs
@@ -1,5 +1,5 @@
-<div>
-    <div id="productContainer"></div>
+<div class="container-fluid flex-row-reverse">
+    <div id="productContainer" class="d-flex flex-column flex-row"></div>
     <script src="javascripts/productList.js"></script>
 </div>
 
