--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+    <link rel='stylesheet' href='/stylesheets/home.css' />
+</head>
+
 <body>
     <div class="top-nav-bar">
         <div class="search-box">
@@ -8,7 +12,7 @@
             <i class="fa fa-times" id="close-btn" onclick="closeMenu()"></i>
             {{!-- <img src="./images/logo.png" class="logo"> --}}
             <h1 class="logo">LOGO</h1>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" id="search-product">
             <span class="input-group-text"><i class="fa fa-search"></i></span>
         </div>
         <div class="menu-bar">
@@ -234,48 +238,11 @@
         </div>
     </section>
 
-    <button onclick="backToTop()" id="back-to-top-btn" title="Go to top">
+    <button id="back-to-top-btn" title="Go to top">
         <i class="fa fa-chevron-circle-up"></i>
     </button>
 
-    <script>
-        function openMenu() {
-            document.getElementById("side-menu").style.display = "block";
-            document.getElementById("menu-btn").style.display = "none";
-            document.getElementById("close-btn").style.display = "block";
-        }
-
-        function closeMenu() {
-            document.getElementById("side-menu").style.display = "none";
-            document.getElementById("menu-btn").style.display = "block";
-            document.getElementById("close-btn").style.display = "none";
-        }
-
-        //Get the button
-        var topButton = document.getElementById("back-to-top-btn");
-
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function () {
-            scrollFunction();
-        };
-
-        function scrollFunction() {
-            if (
-                document.body.scrollTop > 20 ||
-                document.documentElement.scrollTop > 20
-            ) {
-                topButton.style.display = "block";
-            } else {
-                topButton.style.display = "none";
-            }
-        }
-
-        // When the user clicks on the button, scroll to the top of the document
-        function backToTop() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
+    <script src="./javascripts/home.js"></script>
 </body>
 
 </html>
