--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,7 +18,6 @@
         <div class="menu-bar">
             <ul>
                 <li><a href="#"><i class="fa fa-shopping-basket"></i>cart</a></li>
-                {{!-- <li><a href="#">Sign Up</a></li> --}}
                 <li data-toggle="modal" data-target="#loginForm"><a href="#">login </a><i
                         class="fa fa-user-circle fa-lg"></i></li>
             </ul>
@@ -131,28 +130,12 @@
         </div>
     </section>
 
-    <section class="featured-categories">
-        <marquee id="intro" direction="left"><big><i>¡¡¡Check out these lamps!!!</i></big></marquee>
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <img src="./images/lamp-1.png" alt="">
-                </div>
-                <div class="col-md-4">
-                    <img src="./images/lamp-2.png" alt="">
-                </div>
-                <div class="col-md-4">
-                    <img src="./images/lamp-3.png" alt="">
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <section class="on-sale">
+    <section class="featured">
         <div class="container">
             <div class="title-box">
-                <h2>On Sale</h2>
+                <h2>Featured Products</h2>
             </div>
+            <marquee id="intro" direction="left"><big><i>¡¡¡Check out these lamps!!!</i></big></marquee>
             <div class="row">
                 <div class="col-md-3">
                     <div class="product-top">
@@ -161,10 +144,7 @@
                             <button type="button" class="btn btn-secondary" title="Quick Shop">
                                 <i class="fa fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" title="Add to Wishlist">
-                                <i class="fa fa-heart-o"></i>
-                            </button>
-                            <button type="button" class="btn btn-secondary" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary" title="Add to Cart">
                                 <i class="fa fa-shopping-cart"></i>
                             </button>
                         </div>
@@ -181,10 +161,7 @@
                             <button type="button" class="btn btn-secondary" title="Quick Shop">
                                 <i class="fa fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" title="Add to Wishlist">
-                                <i class="fa fa-heart-o"></i>
-                            </button>
-                            <button type="button" class="btn btn-secondary" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary" title="Add to Cart">
                                 <i class="fa fa-shopping-cart"></i>
                             </button>
                         </div>
@@ -201,10 +178,7 @@
                             <button type="button" class="btn btn-secondary" title="Quick Shop">
                                 <i class="fa fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" title="Add to Wishlist">
-                                <i class="fa fa-heart-o"></i>
-                            </button>
-                            <button type="button" class="btn btn-secondary" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary" title="Add to Cart">
                                 <i class="fa fa-shopping-cart"></i>
                             </button>
                         </div>
@@ -221,10 +195,7 @@
                             <button type="button" class="btn btn-secondary" title="Quick Shop">
                                 <i class="fa fa-eye"></i>
                             </button>
-                            <button type="button" class="btn btn-secondary" title="Add to Wishlist">
-                                <i class="fa fa-heart-o"></i>
-                            </button>
-                            <button type="button" class="btn btn-secondary" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary" title="Quick Cart">
                                 <i class="fa fa-shopping-cart"></i>
                             </button>
                         </div>
@@ -268,6 +239,8 @@
             <a class="link" href="https://github.com/JasonBuckley/CST438_Project2" target="_blank"
                 aria-label="View source on GitHub">View Source on GitHub <i class="fa fa-github"
                     aria-hidden="true"></i></a>
+
+            <p>THIS IS A FICTITIOUS SITE :)</p>
         </div>
     </section>
 
