--- a/views/home.hbs
+++ b/views/home.hbs
@@ -36,16 +36,19 @@
                     </div>
                 </div>
                 <div id="tc-modal-body" class="modal-body">
-                    <div id="username-input">
-                        <span class="fa fa-user-o" id="username-icon"></span>
-                        <input type="text" id="username" name="username" placeholder="Username" autocomplete="off">
-                    </div>
-                    <div id="password-input">
-                        <span class="fa fa-key" id="password-icon"></span>
-                        <input type="password" id="password" name="password" placeholder="Password" autocomplete="off">
-                    </div>
+                    <form action="/users">
+                        <div id="username-input">
+                            <span class="fa fa-user-o" id="username-icon"></span>
+                            <input type="text" id="username" name="username" placeholder="Username" autocomplete="off">
+                        </div>
+                        <div id="password-input">
+                            <span class="fa fa-key" id="password-icon"></span>
+                            <input type="password" id="password" name="password" placeholder="Password"
+                                autocomplete="off">
+                        </div>
 
-                    <button type="submit" id="login-button">Login</button>
+                        <button type="submit" id="login-button">Login</button>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" data-toggle="modal" data-target="#loginForm" class="cancelbtn">Cancel</button>
