--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -1,5 +1,10 @@
 /* landing page styles */
 
+body {
+  width: 100%;
+  height: 100%;
+}
+
 /* styles for page heading (nav bar, search bar, and cart, login buttons) */
 .top-nav-bar {
   height: 57px;
@@ -321,6 +326,7 @@
   margin-top: 50px;
   background: black;
   color: white;
+  margin-bottom: 0px;
 }
 
 .footer h1 {
