--- a/views/home.hbs
+++ b/views/home.hbs
@@ -158,7 +158,7 @@
                     <div class="product-top">
                         <img src="./images/lamp-1.png" alt="">
                         <div class="overlay-right">
-                            <button type="button" class="btn btn-secondary" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary product" title="Quick Shop">
                                 <i class="fa fa-eye"></i>
                             </button>
                             <button type="button" class="btn btn-secondary" title="Add to Cart">
@@ -175,7 +175,7 @@
                     <div class="product-top">
                         <img src="./images/lamp-2.png" alt="">
                         <div class="overlay-right">
-                            <button type="button" class="btn btn-secondary" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary product" title="Quick Shop">
                                 <i class="fa fa-eye"></i>
                             </button>
                             <button type="button" class="btn btn-secondary" title="Add to Cart">
@@ -192,7 +192,7 @@
                     <div class="product-top">
                         <img src="./images/lamp-3.png" alt="">
                         <div class="overlay-right">
-                            <button type="button" class="btn btn-secondary" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary product" title="Quick Shop">
                                 <i class="fa fa-eye"></i>
                             </button>
                             <button type="button" class="btn btn-secondary" title="Add to Cart">
@@ -209,7 +209,7 @@
                     <div class="product-top">
                         <img src="./images/lamp-4.png" alt="">
                         <div class="overlay-right">
-                            <button type="button" class="btn btn-secondary" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary product" title="Quick Shop">
                                 <i class="fa fa-eye"></i>
                             </button>
                             <button type="button" class="btn btn-secondary" title="Quick Cart">
