Updated order CRUD Methods, and orderPage

--- a/views/orderPage.hbs
+++ b/views/orderPage.hbs
@@ -1,9 +1,9 @@
 <div>
-    {{{product}}}
+    {{{order}}}
     <script>
         // gets the product sent in through res.render()
-        var product = {{{ product }}} ;
+        var order = {{{ order }}} ;
 
-        console.log(product);
+        console.log(order);
     </script>
 </div>
