added a check before checkout to warn users of items with 0 quantity

--- a/views/shoppingCart.hbs
+++ b/views/shoppingCart.hbs
@@ -31,7 +31,7 @@
             <div>
                 <div class="row mt-4 d-flex align-items-center">
                     <div class="col-sm-6 order-md-2 text-right">
-                        <a href="" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Checkout</a>
+                        <a id="checkout" href="/order/checkout" class="btn btn-primary mb-4 btn-lg pl-5 pr-5">Checkout</a>
                     </div>
                     <div class="col-sm-6 mb-3 mb-m-1 order-md-1 text-md-left">
                         <a href="/">Continue Shopping</a>
@@ -84,33 +84,32 @@
             img = element.imgId ? "https://drive.google.com/uc?export=download&id=" + element.imgId : "/images/Empty.png";
             $("#cartItemHolder").append(
                 `
-                <tr id="cartItem${element.cartId}">
-                    <td>
-                        <div class="row">
-                            <div class="col-md-3 text-left">
-                                <img src="${img}" alt="Picture of ${element.name}" class="img-fluid rounded mb-2 shadow ">
+                        <tr id="cartItem${element.cartId}">
+                            <td>
+                                <div class="row">
+                                    <div class="col-md-3 text-left">
+                                        <img src="${img}" alt="Picture of ${element.name}" class="img-fluid rounded mb-2 shadow ">
+                                            </div>
+                                        <div class="col-md-9 text-left mt-sm-2">
+                                            <h4><strong>${element.name}</strong></h4>
+                                            <p class="font-weight-light">${element.brand}</p>
+                                        </div>
                                     </div>
-                                <div class="col-md-9 text-left mt-sm-2">
-                                    <h4><strong>${element.name}</strong></h4>
-                                    <p class="font-weight-light">${element.brand}</p>
-                                </div>
-                            </div>
-                            </td>
-                        <td> $<span id="totalCost${element.cartId}">${element.cost * parseFloat(element.amount)}</span></td>
-                        <td>
-                            <input id="amount${element.cartId}" type="text" class="form-control form-control-lg text-center amount" value="${element.amount}", maxlength=4>
-                        </td>
-                        <td class="actions" data-th="">
-                            <div class="text-right">
-                                <button id="deleteCart${element.cartId}" class="btn btn-white border-secondary bg-white btn-md mb-2">X</button>
-                            </div>
-                        </td>
-                </tr>
-                `
+                                    </td>
+                                <td> $<span id="totalCost${element.cartId}">${element.cost * parseFloat(element.amount)}</span></td>
+                                <td>
+                                    <input id="amount${element.cartId}" type="text" class="form-control form-control-lg text-center amount" value="${element.amount}", maxlength=4>
+                                </td>
+                                <td class="actions" data-th="">
+                                    <div class="text-right">
+                                        <button id="deleteCart${element.cartId}" class="btn btn-white border-secondary bg-white text-danger btn-md mb-2">X</button>
+                                    </div>
+                                </td>
+                        </tr>
+                        `
             );
 
-            cartCount++;
-            $("#cartCount").text(cartCount);
+            $("#cartCount").text(++cartCount);
 
             subtotal += parseFloat(element.cost) * parseFloat(element.amount);
             $("#cartSubtotal").text(subtotal);
@@ -126,6 +125,7 @@
                 subtotal -= $(`#totalCost${element.cartId}`).text() ? parseFloat($(`#totalCost${element.cartId}`).text()) : 0;
                 $(`#cartItem${element.cartId}`).remove();
                 $("#cartSubtotal").text(subtotal);
+                $("#cartCount").text(--cartCount);
             });
 
             $(`#amount${element.cartId}`).on('keypress', validateNumber);
@@ -136,7 +136,7 @@
          * @param event
          */
         function validateNumber(event) {
-            var key = event.which || event.charCode || event.keyCode || 0;
+            let key = event.which || event.charCode || event.keyCode || 0;
 
             // allows input from left arrow, right arrow, and delete keys.
             if (key == 8 || key == 37 || key == 39) {
@@ -145,6 +145,24 @@
                 return false;
             }
             return true;
-        }; 
+        };
+
+        // alert the user if any cart item has invalid amounts.
+        $("#checkout").on('click', function (e) {
+            let noQuantity = false;
+            let ids = [];
+            $('input[id^=amount]').each(function (i) {
+                noQuantity &= ($(this).val() == "0" || $(this).val() == "")
+                ids.push($(this).attr('id').substring(6));
+            });
+
+            //@TODO use product ids to verify that there is enough stock if not prevent checkout.
+
+            if (!noQuantity) {
+                if (!confirm("All items with 0 quantity will automatically be removed upon checkout.  Are you sure you want to continue with some items having zero quantity.")) {
+                    e.preventDefault();
+                }
+            }
+        });
     </script>
 </div>
