--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -359,7 +359,7 @@ body {
   background: #0b7dda;
 }
 
-/* ---------- Styling for Login Modal --------- */
+/* Styling for Modals */
 .modal-title-container {
   width: 100%;
   display: flex;
@@ -373,17 +373,18 @@ body {
   justify-content: space-between;
 }
 
-#username,
-#password {
+.modal_input {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+  padding-left: 2.375rem;
 }
 
-#login-button {
+#login-button,
+#create-account-button {
   background-color: #2196f3;
   color: white;
   padding: 14px 20px;
@@ -393,7 +394,8 @@ body {
   width: 100%;
 }
 
-#login-button:hover {
+#login-button:hover,
+#create-account-button:hover {
   background-color: #0b7dda;
 }
 
@@ -412,13 +414,7 @@ span.new-here {
   padding-top: 16px;
 }
 
-#username,
-#password {
-  padding-left: 2.375rem;
-}
-
-#username-icon,
-#password-icon {
+.icon {
   position: absolute;
   z-index: 2;
   padding-top: 15px;
