--- a/views/home.hbs
+++ b/views/home.hbs
@@ -55,14 +55,14 @@
                 <div id="tc-modal-body" class="modal-body">
                     <form action="/users">
                         <div id="username-input">
-                            <span class="fa fa-user-o" id="username-icon"></span>
-                            <input type="text" id="username" name="username" placeholder="Username" autocomplete="off"
-                                   required>
+                            <span class="fa fa-user-o icon"></span>
+                            <input type="text" id="LI_username" name="username" placeholder="Username"
+                                autocomplete="off" class="modal_input" required>
                         </div>
                         <div id="password-input">
-                            <span class="fa fa-key" id="password-icon"></span>
-                            <input type="password" id="password" name="password" placeholder="Password"
-                                   autocomplete="off" required>
+                            <span class="fa fa-key icon"></span>
+                            <input type="password" id="LI_password" name="password" placeholder="Password"
+                                autocomplete="off" class="modal_input" required>
                         </div>
 
                         <button type="submit" id="login-button">Login</button>
@@ -70,7 +70,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" data-toggle="modal" data-target="#loginForm" class="cancelbtn">Cancel</button>
-                    <span class="new-here" data-toggle="modal" data-target="#createAcctForum">
+                    <span class="new-here" data-toggle="modal" data-target="#createAccountForm">
                         New here? <a href="#">Create Account</a>
                     </span>
                 </div>
@@ -78,7 +78,7 @@
         </div>
     </div>
 
-    <div class="modal fade" id="createAcctForum" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal fade" id="createAccountForm" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -90,35 +90,33 @@
                     </div>
                 </div>
                 <div id="tc-modal-body" class="modal-body">
-                    <form method="post" action="/users/add"> 
+                    <form method="post" action="/users/add">
                         <div id="create_username">
-                            <span class="fa fa-user-o" id="username-icon"></span>
-                            <input type="text" id="CA_username" name="username" placeholder="Username" autocomplete="off"
-                                   required>
+                            <span class="fa fa-user-o icon"></span>
+                            <input type="text" id="CA_username" name="username" placeholder="Username"
+                                autocomplete="off" class="modal_input" required>
                         </div>
                         <div id="create_password">
-                            <span class="fa fa-key" id="password-icon"></span>
+                            <span class="fa fa-key icon"></span>
                             <input type="password" id="CA_password" name="password" placeholder="Password"
-                                   autocomplete="off" required>
+                                autocomplete="off" class="modal_input" required>
                         </div>
                         <div id="create_address">
-                            <span class="fa fa-key" id="address-icon"></span>
-                            <input type="text" id="CA_address" name="address" placeholder="Address"
-                                   autocomplete="off" required>
-                        </div>
-                        <div>
-                            <span class="fa fa-key" id="password-icon"></span>
-                            <input type="password" id="CA_password" name="password" placeholder="Password"
-                                   autocomplete="off" required>
+                            <span class="fa fa-home icon"></span>
+                            <input type="text" id="CA_address" name="address" placeholder="Address" autocomplete="off"
+                                class="modal_input" required>
                         </div>
                         <div id="create_email">
-                            <input type="email" id="CA_email" name="email" placeholder="Email" autocomplete="off" required />
+                            <span class="fa fa-envelope-o icon"></span>
+                            <input type="email" id="CA_email" name="email" placeholder="Email" autocomplete="off"
+                                class="modal_input" required>
                         </div>
-                        <button type="submit" id="login-button">Create Account</button>
+                        <button type="submit" id="create-account-button">Create Account</button>
                     </form>
-            </div>
+                </div>
                 <div class="modal-footer">
-                    <button type="button" data-toggle="modal" data-target="#loginForm" class="cancelbtn">Cancel</button>
+                    <button type="button" data-toggle="modal" data-target="#createAccountForm"
+                        class="cancelbtn">Cancel</button>
                 </div>
             </div>
         </div>
@@ -128,52 +126,22 @@
         <div class="side-menu" id="side-menu">
             <ul>
                 <li>
-                    Category-1<i class="fa fa-angle-right"></i>
-                    <ul>
-                        <li>Sub Menu-1</li>
-                        <li>Sub Menu-1</li>
-                        <li>Sub Menu-1</li>
-                    </ul>
+                    Explore<i class="fa fa-angle-right"></i>
                 </li>
                 <li>
-                    Category-2<i class="fa fa-angle-right"></i>
-                    <ul>
-                        <li>Sub Menu-2</li>
-                        <li>Sub Menu-2</li>
-                        <li>Sub Menu-2</li>
-                    </ul>
+                    $10 - $20<i class="fa fa-angle-right"></i>
                 </li>
                 <li>
-                    Category-3<i class="fa fa-angle-right"></i>
-                    <ul>
-                        <li>Sub Menu-3</li>
-                        <li>Sub Menu-3</li>
-                        <li>Sub Menu-3</li>
-                    </ul>
+                    $20 - $40<i class="fa fa-angle-right"></i>
                 </li>
                 <li>
-                    Category-4<i class="fa fa-angle-right"></i>
-                    <ul>
-                        <li>Sub Menu-4</li>
-                        <li>Sub Menu-4</li>
-                        <li>Sub Menu-4</li>
-                    </ul>
+                    $40 - $60<i class="fa fa-angle-right"></i>
                 </li>
                 <li>
-                    Category-5<i class="fa fa-angle-right"></i>
-                    <ul>
-                        <li>Sub Menu-5</li>
-                        <li>Sub Menu-5</li>
-                        <li>Sub Menu-5</li>
-                    </ul>
+                    $60 - $80<i class="fa fa-angle-right"></i>
                 </li>
                 <li>
-                    Category-6<i class="fa fa-angle-right"></i>
-                    <ul>
-                        <li>Sub Menu-6</li>
-                        <li>Sub Menu-6</li>
-                        <li>Sub Menu-6</li>
-                    </ul>
+                    $80 - $100<i class="fa fa-angle-right"></i>
                 </li>
             </ul>
         </div>
@@ -182,16 +150,16 @@
             <div id="slider" class="carousel slide carousel-fade" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./images/vase-1.jpg" class="d-block w-100">
+                        <img src="" class="d-block w-100" productId="" id="slider-img-1">
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/vase-2.jpg" class="d-block w-100">
+                        <img src="" class="d-block w-100" productId="" id="slider-img-2">
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/vase-3.jpg" class="d-block w-100">
+                        <img src="" class="d-block w-100" productId="" id="slider-img-3">
                     </div>
                     <div class="carousel-item">
-                        <img src="./images/vase-4.jpg" class="d-block w-100">
+                        <img src="" class="d-block w-100" productId="" id="slider-img-4">
                     </div>
                 </div>
                 <ol class="carousel-indicators">
@@ -209,13 +177,14 @@
             <div class="title-box">
                 <h2>Featured Products</h2>
             </div>
-            <marquee id="intro" direction="left"><big><i>¡¡¡Check out these lamps!!!</i></big></marquee>
+            <marquee id="intro" direction="left"><big><i>¡¡¡Check out these Products!!!</i></big></marquee>
             <div class="row">
                 <div class="col-md-3">
                     <div class="product-top">
-                        <img src="./images/lamp-1.png" alt="">
+                        <img src="" productId="" id="featured-img-1">
                         <div class="overlay-right">
-                            <button type="button" class="btn btn-secondary product" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary product" title="Quick Shop" productId=""
+                                id="featured-img-quick-1">
                                 <i class="fa fa-eye"></i>
                             </button>
                             <button type="button" class="btn btn-secondary" title="Add to Cart">
@@ -224,15 +193,16 @@
                         </div>
                     </div>
                     <div class="product-bottom text-center">
-                        <h3>Product Name</h3>
-                        <h5>Product Price</h5>
+                        <h3 id="feat-prod-name-1"></h3>
+                        <h5 id="feat-prod-price-1"></h5>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="product-top">
-                        <img src="./images/lamp-2.png" alt="">
+                        <img src="" productId="" id="featured-img-2">
                         <div class="overlay-right">
-                            <button type="button" class="btn btn-secondary product" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary product" title="Quick Shop" productId=""
+                                id="featured-img-quick-2">
                                 <i class="fa fa-eye"></i>
                             </button>
                             <button type="button" class="btn btn-secondary" title="Add to Cart">
@@ -241,15 +211,16 @@
                         </div>
                     </div>
                     <div class="product-bottom text-center">
-                        <h3>Product Name</h3>
-                        <h5>Product Price</h5>
+                        <h3 id="feat-prod-name-2"></h3>
+                        <h5 id="feat-prod-price-2"></h5>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="product-top">
-                        <img src="./images/lamp-3.png" alt="">
+                        <img src="" productId="" id="featured-img-3">
                         <div class="overlay-right">
-                            <button type="button" class="btn btn-secondary product" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary product" title="Quick Shop" productId=""
+                                id="featured-img-quick-3">
                                 <i class="fa fa-eye"></i>
                             </button>
                             <button type="button" class="btn btn-secondary" title="Add to Cart">
@@ -258,15 +229,16 @@
                         </div>
                     </div>
                     <div class="product-bottom text-center">
-                        <h3>Product Name</h3>
-                        <h5>Product Price</h5>
+                        <h3 id="feat-prod-name-3"></h3>
+                        <h5 id="feat-prod-price-3"></h5>
                     </div>
                 </div>
                 <div class="col-md-3">
                     <div class="product-top">
-                        <img src="./images/lamp-4.png" alt="">
+                        <img src="" productId="" id="featured-img-4">
                         <div class="overlay-right">
-                            <button type="button" class="btn btn-secondary product" title="Quick Shop">
+                            <button type="button" class="btn btn-secondary product" title="Quick Shop" productId=""
+                                id="featured-img-quick-4">
                                 <i class="fa fa-eye"></i>
                             </button>
                             <button type="button" class="btn btn-secondary" title="Quick Cart">
@@ -275,8 +247,8 @@
                         </div>
                     </div>
                     <div class="product-bottom text-center">
-                        <h3>Product Name</h3>
-                        <h5>Product Price</h5>
+                        <h3 id="feat-prod-name-4"></h3>
+                        <h5 id="feat-prod-price-4"></h5>
                     </div>
                 </div>
             </div>
@@ -289,7 +261,7 @@
                 <div class="col-md-3">
                     <h1>CST 438 - Software Engineering</h1>
                     <img src="./images/logo.png" width="100px" height="100px"
-                         style="background-color: white;border-radius: 50px">
+                        style="background-color: white;border-radius: 50px">
                     <br><br>
                     <p>CSUMB 2020©</p>
                 </div>
@@ -311,9 +283,8 @@
             <hr>
 
             <a class="link" href="https://github.com/JasonBuckley/CST438_Project2" target="_blank"
-               aria-label="View source on GitHub">
-                View Source on GitHub <i class="fa fa-github"
-                                         aria-hidden="true"></i>
+                aria-label="View source on GitHub">
+                View Source on GitHub <i class="fa fa-github" aria-hidden="true"></i>
             </a>
             <p>THIS IS A FICTITIOUS SITE :)</p>
         </div>
