--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,7 +4,7 @@
 <head>
   <title>{{title}}</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel="title icon" type="image/png" href="./images/shopping-bag.ico" />
+  <link rel="title icon" type="image/png" href="../images/shopping-bag.ico" />
   {{!-- <link href="public/css/styles.css" rel="stylesheet" type="text/css" /> --}}
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
