--- a/views/product.hbs
+++ b/views/product.hbs
@@ -49,14 +49,14 @@
                 <div id="tc-modal-body" class="modal-body">
                     <form action="/users">
                         <div id="username-input">
-                            <span class="fa fa-user-o" id="username-icon"></span>
-                            <input type="text" id="username" name="username" placeholder="Username" autocomplete="off"
-                                required>
+                            <span class="fa fa-user-o icon"></span>
+                            <input type="text" id="LI_username" name="username" placeholder="Username"
+                                autocomplete="off" class="modal_input" required>
                         </div>
                         <div id="password-input">
-                            <span class="fa fa-key" id="password-icon"></span>
-                            <input type="password" id="password" name="password" placeholder="Password"
-                                autocomplete="off" required>
+                            <span class="fa fa-key icon"></span>
+                            <input type="password" id="LI_password" name="password" placeholder="Password"
+                                autocomplete="off" class="modal_input" required>
                         </div>
 
                         <button type="submit" id="login-button">Login</button>
@@ -64,45 +64,89 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" data-toggle="modal" data-target="#loginForm" class="cancelbtn">Cancel</button>
-                    <span class="new-here" data-toggle="modal" data-target="#createAccountForm">New here? <a
-                            href="#">Create Account</a> </span>
+                    <span class="new-here" data-toggle="modal" data-target="#createAccountForm">
+                        New here? <a href="#">Create Account</a>
+                    </span>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="container">
+    <div class="modal fade" id="createAccountForm" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <div class="modal-title-container">
+                        <h5 class="modal-title">Create Account</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+                <div id="tc-modal-body" class="modal-body">
+                    <form method="post" action="/users/add">
+                        <div id="create_username">
+                            <span class="fa fa-user-o icon"></span>
+                            <input type="text" id="CA_username" name="username" placeholder="Username"
+                                autocomplete="off" class="modal_input" required>
+                        </div>
+                        <div id="create_password">
+                            <span class="fa fa-key icon"></span>
+                            <input type="password" id="CA_password" name="password" placeholder="Password"
+                                autocomplete="off" class="modal_input" required>
+                        </div>
+                        <div id="create_address">
+                            <span class="fa fa-home icon"></span>
+                            <input type="text" id="CA_address" name="address" placeholder="Address" autocomplete="off"
+                                class="modal_input" required>
+                        </div>
+                        <div id="create_email">
+                            <span class="fa fa-envelope-o icon"></span>
+                            <input type="email" id="CA_email" name="email" placeholder="Email" autocomplete="off"
+                                class="modal_input" required>
+                        </div>
+                        <button type="submit" id="create-account-button">Create Account</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" data-toggle="modal" data-target="#createAccountForm"
+                        class="cancelbtn">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    < class="container">
         <!-- Left Column / Headphones Image -->
         <div class="left-column">
-            <img src="./images/lamp-1.png">
+            <img src="https://drive.google.com/uc?export=download&id={{product.imgId}}">
         </div>
-
 
         <!-- Right Column -->
         <div class="right-column">
 
             <!-- Product Description -->
             <div class="product-description">
-                <span>Product Type: Lamp</span>
-                <h1>Lamp Name: Lampy</h1>
-                <p>Product Description: I don't know much about lamps but this lamp looks like it could emit light from
-                    a bulb when powered quite well</p>
+                <span>{{ product.brand }}</span>
+                <h1>{{ product.name }}</h1>
+                <p>{{ product.info }}</p>
+                <p>Stock: {{ product.stock }}</p>
             </div>
 
             <!-- Product Pricing -->
             <div class="product-price">
-                <span>$1,000,000</span>
+                <span>${{ product.cost }}</span>
                 <a href="#" class="cart-bttn"><i class="fa fa-shopping-basket"></i>Add to cart</a>
             </div>
         </div>
-    </div>
+    </>
 
     <section class="footer">
         <div class="text-center">
             <div class="row">
                 <div class="col-md-3">
                     <h1>CST 438 - Software Engineering</h1>
-                    <img src="./images/logo.png" width="100px" height="100px"
+                    <img src="../images/logo.png" width="100px" height="100px"
                         style="background-color: white;border-radius: 50px">
                     <br><br>
                     <p>CSUMB 2020©</p>
@@ -135,7 +179,7 @@
         <i class="fa fa-chevron-circle-up"></i>
     </button>
 
-    <script src="./javascripts/home.js"></script>
+    <script src="../javascripts/product.js"></script>
 </body>
 
 </html>
