--- a/views/product.hbs
+++ b/views/product.hbs
@@ -116,7 +116,7 @@
         </div>
     </div>
 
-    < class="container">
+    <div class="container">
         <!-- Left Column / Headphones Image -->
         <div class="left-column">
             <img src="https://drive.google.com/uc?export=download&id={{product.imgId}}">
@@ -139,7 +139,7 @@
                 <a href="#" class="cart-bttn"><i class="fa fa-shopping-basket"></i>Add to cart</a>
             </div>
         </div>
-    </>
+    </div>
 
     <section class="footer">
         <div class="text-center">
