--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -426,3 +426,12 @@ span.new-here {
   pointer-events: none;
   color: #aaa;
 }
+
+#login-error {
+  text-align: center;
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  display: none;
+}
