--- a/views/home.hbs
+++ b/views/home.hbs
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div id="tc-modal-body" class="modal-body">
-                    <form action="/users">
+                    <form action="/users" method="get" id="login-form">
                         <div id="username-input">
                             <span class="fa fa-user-o icon"></span>
                             <input type="text" id="LI_username" name="username" placeholder="Username"
@@ -67,7 +67,9 @@
 
                         <button type="submit" id="login-button">Login</button>
                     </form>
+                    <div id="login-error" class="alert alert-danger mt-3">¡Error loging in!</div>
                 </div>
+
                 <div class="modal-footer">
                     <button type="button" data-toggle="modal" data-target="#loginForm" class="cancelbtn">Cancel</button>
                     <span class="new-here" data-toggle="modal" data-target="#createAccountForm">
