--- a/public/stylesheets/product_info.css
+++ b/public/stylesheets/product_info.css
@@ -242,13 +242,48 @@ span.new-here {
   color: #aaa;
 }
 
-#login-error {
+#login-error,
+#create-account-error {
   text-align: center;
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
   display: none;
+}
+
+#message {
+  display: none;
+  background: #f1f1f1;
+  color: #000;
+  position: relative;
+  padding: 15px;
+  margin-top: 10px;
+}
+
+#message p {
+  padding: 2px 35px;
+  font-size: 12px;
+}
+
+.valid {
+  color: green;
+}
+
+.valid:before {
+  position: relative;
+  left: -35px;
+  content: "✔";
+}
+
+.invalid {
+  color: red;
+}
+
+.invalid:before {
+  position: relative;
+  left: -35px;
+  content: "✖";
 }
 
 /* styles for product container */
