--- a/views/home.hbs
+++ b/views/home.hbs
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div id="tc-modal-body" class="modal-body">
-                    <form method="post" action="/users/add">
+                    <form method="post" action="/users/add" id="create-account-form">
                         <div id="create_username">
                             <span class="fa fa-user-o icon"></span>
                             <input type="text" id="CA_username" name="username" placeholder="Username"
@@ -101,7 +101,18 @@
                         <div id="create_password">
                             <span class="fa fa-key icon"></span>
                             <input type="password" id="CA_password" name="password" placeholder="Password"
-                                autocomplete="off" class="modal_input" required>
+                                autocomplete="off" class="modal_input"
+                                pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[!@#$%^&*]).{6,}"
+                                title="Must contain at least one number, one uppercase and lowercase letter, one special character, and at least 6 or more characters"
+                                required>
+                        </div>
+                        <div id="message">
+                            <p>Password must contain the following:</p>
+                            <p id="letter" class="invalid">A <b>lowercase</b> letter</p>
+                            <p id="capital" class="invalid">An <b>uppercase</b> letter</p>
+                            <p id="number" class="invalid">A <b>number</b></p>
+                            <p id="character" class="invalid">A <b>special character</b></p>
+                            <p id="length" class="invalid">Minimum <b>6 characters</b></p>
                         </div>
                         <div id="create_address">
                             <span class="fa fa-home icon"></span>
@@ -115,6 +126,7 @@
                         </div>
                         <button type="submit" id="create-account-button">Create Account</button>
                     </form>
+                    <div id="create-account-error" class="alert alert-danger mt-3">¡Error creating account!</div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" data-toggle="modal" data-target="#createAccountForm"
